Fix z-index

--- a/snowflakes.less
+++ b/snowflakes.less
@@ -13,6 +13,7 @@
   color: white;
   pointer-events: none;
   user-select: none;
+  z-index: 999999;
   span {
     text-shadow: 0 0 5px #08F;
     position: fixed;
